@@ -135,3 +135,8 @@
 #imagepicker {
 
 }
+
+/* class for the inserted image container */
+.imgp_img {
+
+}
